prevent horizontal scrollbar from appearing

--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -109,6 +109,8 @@ html
 {
     color: $text-color-black;
     background-color: $scheppers-blauw-wit;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 /**
